--- a/packages/advertisering-system/composer.json
+++ b/packages/advertisering-system/composer.json
@@ -10,17 +10,15 @@
     "license": "MIT",
     "type": "library",
     "require": {
-        "php": "^7.4|^8.0",
-        "illuminate/contracts": "^8.0"
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
-            "MostafaKamel\\AdvertiseringSystem\\": "src"
-            ,"MostafaKamel\\AdvertiseringSystem\\Database\\Factories\\": "database/factories/",
-            "MostafaKamel\\AdvertiseringSystem\\Database\\Seeders\\": "database/seeders/"
+            "MostafaKamel\\AdvertiseringSystem\\": "src",
+            "MostafaKamel\\AdvertiseringSystem\\Database\\Factories\\": "src/database/factories"
         }
     },
     "autoload-dev": {
