--- a/project/.env.example
+++ b/project/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Advertisering System"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:zPIsLBGdb/bkVFKPubbxfl0mQk3+ZxCOuaESkBzSnGs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,14 +11,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=project
+DB_DATABASE=task_reach_network
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=5b640b4ca6d8ad
+MAIL_PASSWORD=53928007df1923
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=reach-network@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
